# foodgram-project-react-fastapi

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  test.py
backend/: .env-example  .env-test  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini
backend/data/: tags.csv
backend/src/: base.py  config.py  constants.py  db.py  db_manager.py  main.py  setup.py
backend/src/api/: dependencies.py
backend/src/api/routers/: ingredients.py  only_for_admins.py  recipes.py  subscriptions.py  tags.py  users.py
backend/src/connectors/: redis_connector.py
backend/src/exceptions/: base.py  ingredients.py  recipes.py  subscriptions.py  tags.py  users.py
backend/src/logging/logs_history/: foodgram_logger.py
backend/src/logs/: foodgram_logger.py  logging_config.py
backend/src/media/shopping_cart/: pdf_shopping_list.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 01_08-11-2024_12:11_recipe_image_model_changed_to_image_.py  01_20-11-2024_23:50_first_rev.py  01_30-10-2024_12:52_first_migration.py  01_30-10-2024_13:38_first_migration.py  01_31-10-2024_21:26_first_revision.py  02_03-11-2024_16:10_measurement_utit_field_added_to_.py  02_30-10-2024_12:34_first_migration.py  (+19 more)
backend/src/models/: __init__.py  ingredients.py  recipes.py  subscriptions.py  tags.py  users.py
backend/src/repositories/: base.py  favorite_recipes.py  ingredients.py  recipes.py  shopping_cart.py  subscriptions.py  tags.py  users.py
backend/src/schemas/: base.py  ingredients.py  recipes.py  subscriptions.py  tags.py  users.py
backend/src/services/: base.py  ingredients.py  only_for_admins.py  recipes.py  subscriptions.py  tags.py  users.py
backend/src/utils/: basic_template.html  image_manager.py  pdf_recipe_list.py  pdf_shopping_list.py  upload_ingredients.py  upload_tags.py
backend/src/utils.py/: upload_ingredients.py
backend/tests/: conftest.py  mock_ingredients.json
backend/tests/ingredients/: test_api.py
backend/tests/unit_tests/: test_create_shopping_list.py  test_image_manager.py
(+30 files in other folders)
