[tool.poetry]
name = "foodgram-project-react-fastapi"
version = "0.1.0"
description = ""
authors = ["Artem <artni96@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
alembic = "^1.13.3"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
fastapi-users = "^13.0.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
asyncpg = "^0.30.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
